minor changes: fixed some findbugs warnings